# rental_portal_app

./: .cursorrules  .gitignore  README.md  app.py  cleanup.sql  decorators.py  main.py  models.py  property_list.json  pyproject.toml  requirements.txt
docs/: contract_ea4f36bb-ecda-45c6-a3d9-14182cbe6c2c_20250405 (1).docx  contract_instructions.md  contract_template.docx  workflow.md
migrations/: create_rental_applications.py
migrations/versions/: add_score_category.py
routes/: admin.py  applications.py  auth.py  complaints.py  landlord.py  payments.py  properties.py  questionnaire.py  ratings.py  tenant.py  tenant_score.py  users.py
scripts/: create_admin.py  create_docxtpl.py  create_tenants.py  db_manager.py  deploy.sh  init_db.py  populate_db.py  reset_db.py  update_column_type.py  update_schema.py  update_schema.sql
sites-available/: rent-a-home.tft.az
static/css/: style.css
static/js/: credit_score.js  tenant_score.js
templates/: about.html  base.html  error.html  home.html  questionnaire.html
templates/admin/: dashboard.html
templates/applications/: contract_form.html  landlord_applications.html  landlord_info.html  landlord_info_form.html  property_info_form.html  tenant_applications.html  tenant_info_form.html  view_application.html
templates/auth/: login.html  register.html
templates/complaints/: management.html
templates/contracts/: contract_template.docx  contract_template.txt
templates/dashboard/: landlord.html  tenant.html
templates/landlord/: applications.html  contracts.html  (+7 more)
utils/: contract.py  csrf.py  database.py
(+9 files in other folders)
