[project]
name = "rental-portal-app"
version = "0.1.0"
description = "A web application that connects tenants and landlords"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "Flask==2.3.3",
    "Flask-SQLAlchemy==3.1.1",
    "SQLAlchemy==2.0.25",
    "Flask-Login==0.6.3",
    "Flask-WTF==1.2.1",
    "Werkzeug==2.3.7",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "bcrypt==4.1.2",
    "PyJWT==2.8.0",
    "requests==2.31.0",
    "gunicorn==21.2.0",
    "Jinja2==3.1.2",
    "MarkupSafe==2.1.3",
    "itsdangerous==2.1.2",
    "click==8.1.7",
    "pytz==2023.3",
    "WTForms==3.0.1",
    "email-validator==2.0.0",
    "reportlab==4.0.4",
    "pillow==10.0.0"
]

